# dotseal

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  demo.tape
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  lint.yml  publish-extension.yml  publish.yml  test-extension.yml  test.yml
docs/: ASYMMETRIC.md  DEPLOYMENT.md  EDITORS.md  FILE_FORMAT.md  KEY_MANAGEMENT.md  README.md  USAGE.md
dotseal/: __init__.py  cli.py  core.py  crypto.py  exceptions.py  loader.py  parser.py
editors/vscode/: .vscodeignore  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: ensure-test-fixtures.sh
editors/vscode/src/: envFile.ts  extension.ts  provider.ts
editors/vscode/src/dotseal/: core.ts  crypto.ts  errors.ts  keys.ts  parser.ts
editors/vscode/test/: conformance.test.ts  dotseal.test.ts  envFile.test.ts  keys.test.ts  provider.test.ts  python-bridge.py  python-client.ts
editors/vscode/test-project/: .dotseal.key  .env  .env.enc  .gitignore  README.md  pyproject.toml  setup.sh
secure_dotenv/: __init__.py  cli.py  core.py  crypto.py  exceptions.py  loader.py  parser.py
tests/: test_asymmetric.py  test_cli.py  test_core.py  test_crypto.py  test_loader.py  test_parser.py
