[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secure-dotenv"
version = "0.1.0"
description = "Offline-first, Git-friendly encrypted environment variable manager for Python (SOPS-inspired, structural encryption)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "secure-dotenv contributors" }]
keywords = ["dotenv", "env", "encryption", "secrets", "sops", "aes-gcm", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/secure-dotenv"
Repository = "https://github.com/your-org/secure-dotenv"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
secure-dotenv = "secure_dotenv.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["secure_dotenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
