[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotseal"
version = "0.1.0"
description = "Git-friendly encrypted .env files with cleartext keys and sealed values (SOPS-inspired structural encryption)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dotseal contributors" }]
keywords = ["dotenv", "dotseal", "env", "encryption", "secrets", "sops", "aes-gcm", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/Jastchi/dotseal"
Repository = "https://github.com/Jastchi/dotseal"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff",
    "ty",
]

[project.scripts]
dotseal = "dotseal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dotseal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
