[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotseal"
version = "0.2.0"
description = "Git-friendly encrypted .env files with cleartext keys and sealed values (SOPS-inspired structural encryption)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dotseal contributors" }]
keywords = ["dotenv", "dotseal", "env", "encryption", "secrets", "sops", "aes-gcm", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography==48.0.1",
]

[project.urls]
Homepage = "https://github.com/Jastchi/dotseal"
Repository = "https://github.com/Jastchi/dotseal"

[project.optional-dependencies]
dev = [
    "pytest==9.0.3; python_version < '3.10'",
    "pytest==9.0.3; python_version >= '3.10'",
    "pytest-cov",
    "ruff==0.15.16",
    "ty==0.0.47",
]

[project.scripts]
dotseal = "dotseal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dotseal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
